Fix multiple yields alignment on recipe view

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -47,7 +47,7 @@ td.mmf_cell{ padding:0px; }
 #ingredientView th:last-child, #ingredientView tbody td.merge{ border-right:none; }
 #yw1 th, #yw1 td{ border-top:none; }
 #ingredientView td p:last-child{ margin-bottom:0; }
-#ingredientView td{ padding-left:16px; text-indent:-10px; }
+#ingredientView tbody td{ padding-left:16px; text-indent:-10px; }
 h1 a{ color:black; }
 h1 a:hover{ text-decoration:none; }
 #Recipe_description{ width:auto }
